2010-06-01  Julien Le Goff  <jlegoff@flumotion.com>

	reviewed by: Xavier Queralt  <xqueralt@flumotion.com> 

	* flumotion/component/muxers/flv/flv.py:
	* flumotion/component/muxers/flv/flv.xml:
	* flumotion/component/muxers/flv/par_setter.py:
	* flumotion/component/muxers/flv/par_setter.py (added):
	Add a property to dynamically force the pixel aspect ratio to 1/1
	in the flv muxer by modifying the width and height in the caps.

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion-flash.spec.in:
	Use the new @PACKAGE_VERSION_RELEASE@ for the release tag

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/vp6/vp6.py:
	* flumotion/component/muxers/flv/flv.py:
	Reconfigurable encoders and muxers

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Add muxers/aac/Makefile to configure.ac for generation
	* flumotion/component/muxers/flv/Makefile.am:
	Include the wizard_gtk.py file into dist

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/flv/flv.xml:
	* flumotion/component/muxers/flv/wizard_gtk.py (added):
	Add a check for the fluflvmuxer so it can be used from the conversion
	Step (See pub:r8454)

2010-01-21  Xavier Queralt Mateu <xqueralt@flumotion.com>

	reviewed by: jribass

	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/muxers/aac (added):
	* flumotion/component/muxers/aac/__init__.py (added):
	* flumotion/component/muxers/aac/Makefile.am (added):
	* flumotion/component/muxers/aac/aac.py (added):
	* flumotion/component/muxers/aac/aac.xml (added):
	New muxer to allow aac audio without a container. Enable ADTS headers