@@ -20,10 +20,6 @@ from par_setter import FluParSetter
 class FLVMuxer(feedcomponent.MuxerComponent):
     checkOffset = True
 
-    def init(self):
-        gobject.type_register(FluParSetter)
-        gst.element_register(FluParSetter, "fluparsetter", gst.RANK_MARGINAL)
-
     def get_muxer_string(self, properties):
         self.square_pixels = properties.get('square-pixels', False)
         return 'fluflvmux broadcast=true name=muxer'
@@ -33,7 +29,7 @@ class FLVMuxer(feedcomponent.MuxerComponent):
         if not self.square_pixels:
             return linkpad
         if caps.to_string().startswith("video"):
-            setter = gst.element_factory_make("fluparsetter")
+            setter = FluParSetter()
             self.pipeline.add(setter)
             setter.get_pad("src").link(linkpad)
             setter.set_state(gst.STATE_PLAYING)
